# Tikal

./: CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  License  README.md  pyproject.toml
.github/workflows/: CI.yml
example/test_users/: .env  Cargo.toml
example/test_users/src/: main.rs  model.rs
src/: lib.rs
src/application/: executor_utils.rs  mod.rs  orm.rs
src/application/queries/: mod.rs  query_builder.rs
src/domain/: error.rs  mod.rs  query_generator.rs  traits.rs
src/domain/casts/: cast_type.rs  casts_struct.rs  mod.rs
src/domain/entities/: error.rs
src/domain/model/: active_model.rs  entity.rs  lazy.rs  mod.rs  relationships.rs  validate.rs
src/domain/queries/: aggregate_methods.rs  mod.rs  operators.rs  order_methods.rs  query_builder.rs  scopes.rs  where_condition.rs  where_methods.rs
src/domain/query/: aggregate.rs  builder.rs  extensions.rs  filter.rs  mod.rs  order.rs
src/domain/repositories/: executor.rs  mod.rs  types.rs
src/domain/value_objects/: mod.rs  value.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: generic_repository.rs  mod.rs
src/infrastructure/adapters/database/: executor.rs  mod.rs
src/infrastructure/adapters/database/drivers/: database_driver.rs  mysql.rs  postgres.rs  sqlite.rs
src/infrastructure/config/: config.rs  database.rs  env.rs  logging.rs  mod.rs  settings.rs
src/infrastructure/core/types/: mod.rs
src/infrastructure/database/: connection.rs  executor.rs  factory.rs  mod.rs  pool.rs  query_builder.rs
src/infrastructure/database/drivers/: database_driver.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/infrastructure/database/mock/: executor.rs  mod.rs
src/infrastructure/drivers/: common.rs  executor.rs  mod.rs  traits.rs  transaction.rs
src/infrastructure/drivers/mysql/: mod.rs
src/infrastructure/drivers/postgres/: mod.rs
src/infrastructure/drivers/sqlite/: mod.rs
src/infrastructure/migrations/: manager.rs  mod.rs  runner.rs
src/infrastructure/query_builder/: mod.rs
src/infrastructure/query_builder/ast/: expressions.rs  mod.rs  queries.rs
src/infrastructure/query_builder/builders/: mod.rs  query_ast_builder.rs
src/infrastructure/query_builder/generators/: base.rs  common.rs  config.rs  enum.rs  generator_enum.rs  mod.rs  mysql.rs  postgres.rs  sql_generator.rs  sqlite.rs  trait.rs
src/infrastructure/query_builder/generators/databases/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  types.rs
src/infrastructure/relationships/: builders.rs  mod.rs
src/infrastructure/repositories/: mod.rs  sql_repository.rs
src/infrastructure/schema/: builder.rs  column.rs  executable.rs  index.rs  mod.rs  sql_generator.rs  sql_generator_impl.rs  table.rs  types.rs
src/infrastructure/schema/builders/: column_builder.rs  index_builder.rs  mod.rs  table_builder.rs
src/infrastructure/schema/generators/: base.rs  config.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  trait.rs  unified.rs
src/infrastructure/services/config/: config.rs  database.rs  mod.rs  settings.rs
src/infrastructure/services/logging/: log_level.rs  logging.rs  mod.rs
src/infrastructure/services/migrations/: migration.rs  migration_runner.rs  migration_status.rs
src/infrastructure/types/: mod.rs
src/kernel/error/: kernel_error.rs  mod.rs
src/kernel/types/: mod.rs
src/kernel/types/cache/: cache_key.rs  mod.rs  ttl.rs
src/kernel/types/core/: boolean_flag.rs  id.rs  mod.rs  non_empty_string.rs  value.rs  version.rs
src/kernel/types/db/: connection_name.rs  db_row.rs  driver_name.rs  mod.rs  query_timeout.rs  transaction_state.rs
src/kernel/types/pagination/: batch_size.rs  mod.rs  page.rs  pagination.rs  per_page.rs
src/kernel/types/query/: join_clause.rs  join_type.rs  limit.rs  mod.rs  offset.rs  operator.rs  order_by.rs  sort_direction.rs  where_clause.rs  where_group.rs
src/kernel/types/relation/: mod.rs  pivot_table.rs  relation_key.rs  relation_name.rs  relation_type.rs
src/kernel/types/schema/: column_name.rs  column_type.rs  column_value.rs  default_value.rs  foreign_key.rs  index_name.rs  migration_name.rs  mod.rs  nullable.rs  primary_key.rs  schema_name.rs  table_name.rs
src/kernel/utils/: datetime.rs
src/presentation/: mod.rs
src/presentation/macros/: model.rs
test/: run_all.rs
test/integration/: database_connectivity_test.rs
test/unit/: casts_test.rs  config_test.rs  mod.rs  operators_test.rs  validation_test.rs
test/utils/: mod.rs
tests/integration/: mod.rs
tests/unit/: casts_test.rs  config_test.rs  query_comprehensive_test.rs  validation_test.rs
tikal-macros/: Cargo.toml
tikal-macros/src/: lib.rs
tikal-macros/src/model/attrs/: column.rs  mod.rs  relation.rs  table.rs
tikal_macros/: Cargo.toml
tikal_macros/src/: entity.rs  from_row.rs  lib.rs  model_mapping.rs  type_conversion.rs  utils.rs
tikal_macros/src/model/attrs/: column.rs  relation.rs  table.rs
