[package]
name = "tikal"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Hector3269/Tikal.git"

[lib]
name = "tikal"

[dependencies]
#pyo3 = { version = "0.27.2", features = [
#    "extension-module",
#    "experimental-async",
#] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "postgres",
    "sqlite",
    "chrono",
    "json",
] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
once_cell = "1.19"
testcontainers = "0.26.2"
tikal-macros = { path = "./tikal-macros" }

[dev-dependencies]
criterion = "0.8.1"

# cargo test --test run_all
