[package]
name = "tikal"
version = "0.1.2"
edition = "2021"
description = "A Rust ORM library for building database-driven applications"
authors = ["Hector3269"]
repository = "https://github.com/Hector3269/Tikal.git"
readme = "README.md"

keywords = ["orm", "database", "sql", "migration", "rust"]
categories = ["database", "web-programming"]

[lib]
name = "tikal"


[features]

default = ["sqlite", "sqlx/chrono", "sqlx/json"]

cli = ["dep:clap"]

sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
] }

tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0.17"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

once_cell = "1.19"
sha2 = "0.10"
dotenvy = "0.15"
regex = "1.10"

tikal-macros = { path = "./tikal-macros" }

colored = "3.0"

clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3.24.0"
testcontainers = "0.26.3"
