[package]
name = "tikal_macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the Tikal ORM"
authors = ["Hector3269"]
repository = "https://github.com/Hector3269/Tikal.git"
license-file = "../LICENSE"
keywords = ["orm", "database", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
